[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/box.png" type="Texture" id=1]
[ext_resource path="res://assets/Unit/medievalUnit_06.png" type="Texture" id=2]
[ext_resource path="res://scripts/Unit.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/red_tick.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/grey_tickGrey.png" type="Texture" id=5]
[ext_resource path="res://assets/Fonts/Kenney Mini.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.6, 12.15 )

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 6 )

[node name="unit" type="KinematicBody2D" groups=[
"units",
]]
input_pickable = true
script = ExtResource( 3 )
detect_radius = 250
fire_rate = 0.2

[node name="box" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="label_name" type="Label" parent="."]
visible = false
margin_left = -21.0
margin_top = -47.5
margin_right = 22.0
margin_bottom = -25.5
custom_fonts/font = SubResource( 2 )
text = "name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar" type="TextureProgress" parent="."]
visible = false
margin_left = -22.5
margin_top = -27.75
margin_right = 20.5
margin_bottom = -13.75
value = 40.0
rounded = true
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 2
stretch_margin_right = 10
stretch_margin_bottom = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Visibility" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Visibility"]
position = Vector2( -13.0815, -2.12132 )
polygon = PoolVector2Array( 20, 10, 190, 90, 210, 68, 227, 48, 240, 23, 245, 0, 240, -23, 227, -48, 210, -68, 190, -90, 20, -5 )
[connection signal="input_event" from="." to="." method="_on_unit_input_event"]
[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
